                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 21-05-2006 changed: removed duplicated samba options in xboxmediacenter.xml and moved samba clienttimeout and doscodepage to AdvancedSettings.xml
 - 21-05-2006 changed: rewrote network init and retrieval of current ip/subnet...
 - 21-05-2006 changed: Initial commit of new My Programs system (more in line with the other categories.)  Test via specifying <newmyprograms>true</newmyprograms> in AdvancedSettings.xml
 - 21-05-2006 fixed: [ 1492281 ] Some video thumbnails aren't loading
 - 21-05-2006 changed: Moved "Allow file operations", "Unroll RAR Archives" and "Ignore The When Sorting" to the global File Lists settings (under Appearance).  Removed the Video OSD timeout setting, the Low quality renderer option and the "Enlarge VobSubs" option.
 - 21-05-2006 fixed: AM/PM switched in time display
 - 20-05-2006 fixed: Startup window setting was broken.
 - 19-05-2006 updated: French language file
 - 19-05-2006 updated: Chinese (Traditional) language file (Thnx to dog099)
 - 19-05-2006 updated: Chinese (Simple) language file (Thnx to omenpica)
 - 19-05-2006 updated: Polish language file (Thnx to smuto and the Polish Community Forum)
 - 19-05-2006 fixed: Esperanto language file was UTF-16 encoded
 - 19-05-2006 fixed: [ 1491374 ] Time/Date Setting Problem
 - 19-05-2006 fixed: TextBox crashed trying to handle linebreaks.
 - 18-05-2006 added: localization of date and time format via langinfo.xml
 - 18-05-2006 fixed: music nav, when the language is changed, the shares are displayed in the previous language
 - 18-05-2006 changed: lowered protocol level of cddb to 5 again (none utf8 queries to freedb)